--- a/Css/style.css
+++ b/Css/style.css
@@ -115,7 +115,8 @@ footer div{
         width: 30px;
     }
     .logo p{
-        font-size: 18px;
+        font-size: 15px;
+        padding-left: 5px;
     }
     .section1 .main{
         top: 40px;
