--- a/Css/style.css
+++ b/Css/style.css
@@ -56,6 +56,7 @@ body{
     margin-right: auto;
     border: 2px solid #dddfe2;
     border-radius: 10px;
+    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.9);
 }
 .section1 .main h2{
     font-size: 28px;
@@ -108,14 +109,14 @@ footer div{
         height: 90vh;
     }
     .logo{
-        width: 150px;
+        width: 180px;
         left: 20px;
     }
     .logo img{
         width: 30px;
     }
     .logo p{
-        font-size: 15px;
+        font-size: 16px;
         padding-left: 5px;
     }
     .section1 .main{
