--- a/Css/style2.css
+++ b/Css/style2.css
@@ -55,6 +55,7 @@ body{
     margin-right: auto;
     border: 2px solid #dddfe2;
     border-radius: 10px;
+    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.9);
 }
 .section1 .main img{
     width: 90%;
@@ -83,14 +84,15 @@ footer div{
         height: 90vh;
     }
     .logo{
-        width: 150px;
+        width: 180px;
         left: 20px;
     }
     .logo img{
         width: 30px;
     }
     .logo p{
-        font-size: 18px;
+        font-size: 16px;
+        padding-left: 5px;
     }
     .section1 .main{
         top: 90px;
